--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
                 <img src="facebook_1718925730848_7209697068599651861.jpg", alt="">
             </figure>
             <h2> Anuar Junior dos Santos El Rezz </h2>
-            <a href="https://github.com/AnuarRezz" target="_blank">
-                <span class="mdi mdi-github"></span>
-              </a>
-              <a href="https://www.linkedin.com/in/anuar-el-rezz-472613176/" target="_blank">
-                  <span class="mdi mdi-linkedin"></span>
+        <selecion>
+            <div class="redes_sociais">
+                <a href="https://github.com/AnuarRezz" target="_blank">
+                    <span class="mdi mdi-github"></span>
                 </a>
+                <a href="https://www.linkedin.com/in/anuar-el-rezz-472613176/" target="_blank">
+                    <span class="mdi mdi-linkedin"></span>
+                    </a>
+
+            </div>
+                
+        </selecion>
                 <p>Meu nome é Anuar tenho 26 anos, estou cursando analise de 
                     desenvolvimento de sistema.
                </p>
